<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iKnow</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="study">Study</string>
    <string name="review">Review</string>
    <string name="test">Test</string>
    <string name="update">Update</string>
    <string name="javaTester">Java Tester</string>
    
    <string name="QuestionReview">Review Questions</string>
    <string name="QuestionStudy">Study Questions</string>
    
    <string name="previous">Previous</string>
    <string name="learned">Learned</string>
    <string name="addReview">Add to list</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="questionName">Question Name</string>
    <string name="questionDesc">Question Answer</string>
    
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    
    <string name="server_url">http://10.0.2.2:8000/</string>
	<string name="lastes_questions">questions-json/questions.json</string>
</resources>
