<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/learn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grey_background"
            android:text="@string/study"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </Button>

        <Button
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grey_background"
            android:text="@string/review"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </Button>

        <Button
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grey_background"
            android:text="@string/test"
            android:textColor="#ffffff"
            android:textSize="20sp" >
        </Button>

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grey_background"
            android:text="@string/update"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>