<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:id="@+id/review_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/grey_background"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QuestionReview"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/review_title"
        android:layout_marginTop="20dp"
        android:background="@drawable/panel"
        android:gravity="start"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/review_spelling"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/review_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:scrollbars = "vertical"          
            android:layout_gravity="start"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/review_beforeone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grey_background"
            android:text="@string/previous"
            android:textColor="#ffffff"
            android:textSize="14sp" >
        </Button>

        <Button
            android:id="@+id/review_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grey_background"
            android:text="@string/learned"
            android:textColor="#ffffff"
            android:textSize="14sp" >
        </Button>

        <Button
            android:id="@+id/review_nextone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grey_background"
            android:text="@string/next"
            android:textColor="#ffffff"
            android:textSize="14sp" >
        </Button>
    </LinearLayout>

</RelativeLayout>