<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/test_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/grey_background"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/test_title"
        android:layout_marginTop="20dp"
        android:background="@drawable/panel"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/WordName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="20sp" />

	     <RadioGroup
	         android:id="@+id/WordMeanning"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:orientation="vertical" >

	         <RadioButton
	             android:id="@+id/WordMeaning1"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:textColor="#000000" />

	         <RadioButton
	             android:id="@+id/WordMeaning2"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:textColor="#000000" />

	         <RadioButton
	             android:id="@+id/WordMeaning3"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:textColor="#000000" />

	         <RadioButton
	             android:id="@+id/WordMeaning4"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:textColor="#000000" />
	     </RadioGroup>
</LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/NextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grey_background"
            android:maxWidth="200dp"
            android:text="@string/next"
            android:textColor="#ffffff" >
        </Button>

        <Button
            android:id="@+id/OverButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grey_background"
            android:text="@string/finish"
            android:textColor="#ffffff" >
        </Button>

    </LinearLayout>

</RelativeLayout>